src/io/compiler/core/IsiGrammarParser.java
// Generated from IsiGrammar.g4 by ANTLR 4.13.2
package io.compiler.core;

	import java.util.ArrayList;
	import java.util.Stack;
	import io.compiler.runtime.*;
	import java.util.HashMap;
	import io.compiler.types.*;
	import io.compiler.core.exceptions.*;
	import io.compiler.core.ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class IsiGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, OP_SUM=20, OP_SUB=21, OP_MUL=22, OP_DIV=23, OP_AT=24, 
		OPREL=25, ID=26, VIRG=27, DP=28, PV=29, AP=30, FP=31, ACH=32, FCH=33, 
		WS=34, NUM=35, RNUM=36, TEXTO=37;
	public static final int
		RULE_prog = 0, RULE_declara = 1, RULE_bloco = 2, RULE_cmd = 3, RULE_cmdLeitura = 4, 
		RULE_cmdEscrita = 5, RULE_cmdEscritaSemPulo = 6, RULE_cmdExpr = 7, RULE_cmdIf = 8, 
		RULE_cmdRepWhile = 9, RULE_cmdRepDoWhile = 10, RULE_expr = 11, RULE_exprl = 12, 
		RULE_termo = 13, RULE_termol = 14, RULE_fator = 15, RULE_tipo = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "declara", "bloco", "cmd", "cmdLeitura", "cmdEscrita", "cmdEscritaSemPulo", 
			"cmdExpr", "cmdIf", "cmdRepWhile", "cmdRepDoWhile", "expr", "exprl", 
			"termo", "termol", "fator", "tipo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'programa'", "'inicio'", "'fim'", "'fimprog'", "'declare'", "'leia'", 
			"'escrevaln'", "'escreva'", "'se'", "'entao'", "'fimEntao'", "'senao'", 
			"'fimse'", "'enquanto'", "'faca'", "'fimDW'", "'number'", "'text'", "'real'", 
			"'+'", "'-'", "'*'", "'/'", "':='", null, null, "','", "':'", "';'", 
			"'('", "')'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "OP_SUM", "OP_SUB", "OP_MUL", 
			"OP_DIV", "OP_AT", "OPREL", "ID", "VIRG", "DP", "PV", "AP", "FP", "ACH", 
			"FCH", "WS", "NUM", "RNUM", "TEXTO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "IsiGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		private Stack<AbstractExpression> stack = new Stack<AbstractExpression>();
		private AbstractExpression topo = null;
		
		private HashMap<String,Var> symbolTable = new HashMap<String, Var>();
		private ArrayList<Var> currentDecl = new ArrayList<Var>();
		private Types currentType;
		private Types leftType = null, rightType=null;
		private Program program = new Program();
		
		private String strExpr = "";
		
		private Stack<ArrayList<Command>> cmdStack = new Stack<ArrayList<Command>>();
		private Stack<IfCommand> ifStack = new Stack<IfCommand>();
		private Stack<WhileCommand> whileStack = new Stack<WhileCommand>();
		private Stack<DoWhileCommand> doWhileStack = new Stack<DoWhileCommand>();
		private Stack<String> expressionStack = new Stack<String>();
		
		private ArrayList<String> condicao = new ArrayList<String>();
		
		private AtribCommand currentAtribCommand;
		
		private ArrayList<String> notUsed = new ArrayList<String>();
		private AbstractExpression topo2 = null;
		private String _ID;
		
		public void isNotUsedWarningGen(){
	    	for (String element : notUsed) {
			    WarningHandler.sendWarning("Variable " + element + " declared but not used");
			}
	    }
		
		public double generateValue(){
			if (topo == null){
				topo = stack.pop();
			}
			return topo.evaluate();
		}
		
		public String generateJSON(){
			if (topo == null){
				topo = stack.pop();
			}
			return topo.toJson();
		}
		
		// Compiler
		
		public void updateType(){
	    	for(Var v: currentDecl){
	    	   v.setType(currentType);
	    	   symbolTable.put(v.getId(), v);
	    	}
	    }
		
		public void exibirVar(){
			for (String id: symbolTable.keySet()){
	        	System.out.println(symbolTable.get(id));
	        }
		}
		
		public Program getProgram(){
	    	return this.program;
	    	}
		
		public boolean isDeclared(String id){
	    	return symbolTable.get(id) != null;
	    }    

	public IsiGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(IsiGrammarParser.ID, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public List<DeclaraContext> declara() {
			return getRuleContexts(DeclaraContext.class);
		}
		public DeclaraContext declara(int i) {
			return getRuleContext(DeclaraContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiGrammarListener ) ((IsiGrammarListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiGrammarListener ) ((IsiGrammarListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			match(T__0);
			setState(35);
			match(ID);
			 program.setName(_input.LT(-1).getText());
			                            cmdStack.push(new ArrayList<Command>());
			                          
			setState(38); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(37);
				declara();
				}
				}
				setState(40); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__4 );
			setState(42);
			match(T__1);
			setState(43);
			bloco();
			setState(44);
			match(T__2);
			setState(45);
			match(T__3);

			                  	  program.setSymbolTable(symbolTable);
			                 	  program.setCommandList(cmdStack.pop());
			                  	  isNotUsedWarningGen();
			               		
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaraContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(IsiGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(IsiGrammarParser.ID, i);
		}
		public TerminalNode DP() { return getToken(IsiGrammarParser.DP, 0); }
		public TerminalNode PV() { return getToken(IsiGrammarParser.PV, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public List<TerminalNode> VIRG() { return getTokens(IsiGrammarParser.VIRG); }
		public TerminalNode VIRG(int i) {
			return getToken(IsiGrammarParser.VIRG, i);
		}
		public DeclaraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declara; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiGrammarListener ) ((IsiGrammarListener)listener).enterDeclara(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiGrammarListener ) ((IsiGrammarListener)listener).exitDeclara(this);
		}
	}

	public final DeclaraContext declara() throws RecognitionException {
		DeclaraContext _localctx = new DeclaraContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declara);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(T__4);
			currentDecl.clear();
			setState(50);
			match(ID);
			 currentDecl.add(new Var(_input.LT(-1).getText()));
							 notUsed.add(_input.LT(-1).getText());
							
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIRG) {
				{
				{
				setState(52);
				match(VIRG);
				setState(53);
				match(ID);
				 currentDecl.add(new Var(_input.LT(-1).getText()));
										notUsed.add(_input.LT(-1).getText());
										
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			match(DP);
			{
			setState(61);
			tipo();
			}
			updateType();
			setState(63);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlocoContext extends ParserRuleContext {
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiGrammarListener ) ((IsiGrammarListener)listener).enterBloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiGrammarListener ) ((IsiGrammarListener)listener).exitBloco(this);
		}
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bloco);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(65);
				cmd();
				}
				}
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 67158976L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdContext extends ParserRuleContext {
		public CmdLeituraContext cmdLeitura() {
			return getRuleContext(CmdLeituraContext.class,0);
		}
		public CmdEscritaContext cmdEscrita() {
			return getRuleContext(CmdEscritaContext.class,0);
		}
		public CmdEscritaSemPuloContext cmdEscritaSemPulo() {
			return getRuleContext(CmdEscritaSemPuloContext.class,0);
		}
		public CmdExprContext cmdExpr() {
			return getRuleContext(CmdExprContext.class,0);
		}
		public CmdIfContext cmdIf() {
			return getRuleContext(CmdIfContext.class,0);
		}
		public CmdRepWhileContext cmdRepWhile() {
			return getRuleContext(CmdRepWhileContext.class,0);
		}
		public CmdRepDoWhileContext cmdRepDoWhile() {
			return getRuleContext(CmdRepDoWhileContext.class,0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiGrammarListener ) ((IsiGrammarListener)listener).enterCmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiGrammarListener ) ((IsiGrammarListener)listener).exitCmd(this);
		}
	}

	public final CmdContext cmd() throws RecognitionException {
		CmdContext _localctx = new CmdContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cmd);
		try {
			setState(77);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				cmdLeitura();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				cmdEscrita();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				cmdEscritaSemPulo();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
				cmdExpr();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 5);
				{
				setState(74);
				cmdIf();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 6);
				{
				setState(75);
				cmdRepWhile();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 7);
				{
				setState(76);
				cmdRepDoWhile();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdLeituraContext extends ParserRuleContext {
		public TerminalNode AP() { return getToken(IsiGrammarParser.AP, 0); }
		public TerminalNode ID() { return getToken(IsiGrammarParser.ID, 0); }
		public TerminalNode FP() { return getToken(IsiGrammarParser.FP, 0); }
		public TerminalNode PV() { return getToken(IsiGrammarParser.PV, 0); }
		public CmdLeituraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdLeitura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiGrammarListener ) ((IsiGrammarListener)listener).enterCmdLeitura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiGrammarListener ) ((IsiGrammarListener)listener).exitCmdLeitura(this);
		}
	}

	public final CmdLeituraContext cmdLeitura() throws RecognitionException {
		CmdLeituraContext _localctx = new CmdLeituraContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cmdLeitura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(T__5);
			setState(80);
			match(AP);
			setState(81);
			match(ID);
			 if (!isDeclared(_input.LT(-1).getText())) {
			                       throw new IsiSemanticException("Undeclared Variable: "+_input.LT(-1).getText());
			                   		}
				                   symbolTable.get(_input.LT(-1).getText()).setInitialized(true);
				                   Command cmdRead = new ReadCommand(symbolTable.get(_input.LT(-1).getText()));
				                   notUsed.remove(_input.LT(-1).getText());
				                   cmdStack.peek().add(cmdRead);
			                 	
			setState(83);
			match(FP);
			setState(84);
			match(PV);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdEscritaContext extends ParserRuleContext {
		public TerminalNode AP() { return getToken(IsiGrammarParser.AP, 0); }
		public TerminalNode FP() { return getToken(IsiGrammarParser.FP, 0); }
		public TerminalNode PV() { return getToken(IsiGrammarParser.PV, 0); }
		public FatorContext fator() {
			return getRuleContext(FatorContext.class,0);
		}
		public CmdEscritaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdEscrita; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiGrammarListener ) ((IsiGrammarListener)listener).enterCmdEscrita(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiGrammarListener ) ((IsiGrammarListener)listener).exitCmdEscrita(this);
		}
	}

	public final CmdEscritaContext cmdEscrita() throws RecognitionException {
		CmdEscritaContext _localctx = new CmdEscritaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cmdEscrita);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(T__6);
			setState(87);
			match(AP);
			{
			setState(88);
			fator();
			  Command cmdWrite = new WriteCommand(_input.LT(-1).getText());
			                          cmdStack.peek().add(cmdWrite);
			                       
			}
			setState(91);
			match(FP);
			setState(92);
			match(PV);
			 rightType = null;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdEscritaSemPuloContext extends ParserRuleContext {
		public TerminalNode AP() { return getToken(IsiGrammarParser.AP, 0); }
		public TerminalNode FP() { return getToken(IsiGrammarParser.FP, 0); }
		public TerminalNode PV() { return getToken(IsiGrammarParser.PV, 0); }
		public FatorContext fator() {
			return getRuleContext(FatorContext.class,0);
		}
		public CmdEscritaSemPuloContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdEscritaSemPulo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiGrammarListener ) ((IsiGrammarListener)listener).enterCmdEscritaSemPulo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiGrammarListener ) ((IsiGrammarListener)listener).exitCmdEscritaSemPulo(this);
		}
	}

	public final CmdEscritaSemPuloContext cmdEscritaSemPulo() throws RecognitionException {
		CmdEscritaSemPuloContext _localctx = new CmdEscritaSemPuloContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cmdEscritaSemPulo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(T__7);
			setState(96);
			match(AP);
			{
			setState(97);
			fator();
			  Command cmdWriteNoJump = new WriteNoJumpCommand(_input.LT(-1).getText());
			                          		cmdStack.peek().add(cmdWriteNoJump);
			                       			
			}
			setState(100);
			match(FP);
			setState(101);
			match(PV);
			 rightType = null;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdExprContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(IsiGrammarParser.ID, 0); }
		public TerminalNode OP_AT() { return getToken(IsiGrammarParser.OP_AT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PV() { return getToken(IsiGrammarParser.PV, 0); }
		public CmdExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsiGrammarListener ) ((IsiGrammarListener)listener).enterCmdExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsiGrammarListener ) ((IsiGrammarListener)listener).exitCmdExpr(this);
		}
	}
